# buddies_back

./: README.md  db.sqlite3  manage.py  pyproject.toml
buddies/: asgi.py  settings.py  urls.py  wsgi.py
transactions/: apps.py  models.py  schema.py  serializers.py  signals.py  urls.py
transactions/migrations/: 0001_initial.py
transactions/views/: account.py  auth.py  category.py  transaction.py  user.py
