[tool.poetry]
name = "buddies-back"
version = "0.1.0"
description = ""
authors = ["Mix Sirapat <sirapat.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
djangorestframework = "^3.15.2"
graphene-django = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
